Cosmian Auth Server UI Integration
